--- a/templates/restaurants/restaurants_list.html
+++ b/templates/restaurants/restaurants_list.html
@@ -4,47 +4,162 @@
 {% block title %}Restaurants Search{% endblock %}
 
 {% block content %}
-<table class="table table-bordered" id="myTable">
-	<thead>
-	    <tr>
-	        <th>Restaurant id</th>
-	        <th>Name</th>
-	        <th>Cuisines</th>
-			<th>Average cost for two</th>
-			<th>Currency</th>
-			<th>Has table booking</th>
-			<th>Has online delivery</th>
-			<th>Aggregate rating</th>
-			<th>Rating color</th>
-			<th>Rating text</th>
-			<th>Votes</th></th>
-
-	    </tr>
-	</thead>
-    {% for restaurant in object_list %}
-	<tbody>    
-	    <tr> 
-	        <td>{{ restaurant.restaurant_id }}</td>
-	        <td>{{ restaurant.restaurant_name }}</td>
-			<td>{{ restaurant.cuisines }}</td>
-			<td>{{ restaurant.average_cost_for_two }}</td>
-			<td>{{ restaurant.currency }}</td>
-			<td>{{ restaurant.has_table_booking }}</td>
-			<td>{{ restaurant.has_online_delivery }}</td>
-			<td>{{ restaurant.aggregate_rating }}</td>
-			<td>{{ restaurant.rating_color }}</td>
-			<td>{{ restaurant.rating_text }}</td>
-			<td>{{ restaurant.votes }}</td>
-	    </tr>
-	</tbody>	
-    {% endfor %}
-</table>
-
-<script type="text/javascript">
-	$(document).ready( function () {
-	    $('#myTable').DataTable();
-	} );
-</script>
+	<div class="container">
+        <div class="table-wrapper">
+            <div class="table-title">
+                <div class="row">
+                    <div class="col-sm-6">
+						<h2>Manage <b>Restaurants</b></h2>
+					</div>
+					<div class="col-sm-6">
+						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Restaurant</span></a>						
+					</div>
+                </div>
+            </div>
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+				        <th>Restaurant id</th>
+				        <th>Name</th>
+				        <th>Cuisines</th>
+						<th>Average cost for two</th>
+						<th>Currency</th>
+						<th>Has table booking</th>
+						<th>Has online delivery</th>
+						<th>Aggregate rating</th>
+						<th>Rating color</th>
+						<th>Rating text</th>
+						<th>Votes</th></th>
+						<th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                	{% for restaurant in object_list %}
+                    <tr>
+                        <td>{{ restaurant.restaurant_id }}</td>
+				        <td>{{ restaurant.restaurant_name }}</td>
+						<td>{{ restaurant.cuisines }}</td>
+						<td>{{ restaurant.average_cost_for_two }}</td>
+						<td>{{ restaurant.currency }}</td>
+						<td>{{ restaurant.has_table_booking }}</td>
+						<td>{{ restaurant.has_online_delivery }}</td>
+						<td>{{ restaurant.aggregate_rating }}</td>
+						<td>{{ restaurant.rating_color }}</td>
+						<td>{{ restaurant.rating_text }}</td>
+						<td>{{ restaurant.votes }}</td>
+                        <td>
+                            <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                        </td>
+                    </tr>
+     				{% endfor %}
+                </tbody>
+            </table>
+			<div class="clearfix">
+                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
+                <ul class="pagination">
+                    <li class="page-item disabled"><a href="#">Previous</a></li>
+                    <li class="page-item"><a href="#" class="page-link">1</a></li>
+                    <li class="page-item"><a href="#" class="page-link">2</a></li>
+                    <li class="page-item active"><a href="#" class="page-link">3</a></li>
+                    <li class="page-item"><a href="#" class="page-link">4</a></li>
+                    <li class="page-item"><a href="#" class="page-link">5</a></li>
+                    <li class="page-item"><a href="#" class="page-link">Next</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+	<!-- Edit Modal HTML -->
+	<div id="addEmployeeModal" class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<form>
+					<div class="modal-header">						
+						<h4 class="modal-title">Add Employee</h4>
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					</div>
+					<div class="modal-body">					
+						<div class="form-group">
+							<label>Name</label>
+							<input type="text" class="form-control" required>
+						</div>
+						<div class="form-group">
+							<label>Email</label>
+							<input type="email" class="form-control" required>
+						</div>
+						<div class="form-group">
+							<label>Address</label>
+							<textarea class="form-control" required></textarea>
+						</div>
+						<div class="form-group">
+							<label>Phone</label>
+							<input type="text" class="form-control" required>
+						</div>					
+					</div>
+					<div class="modal-footer">
+						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+						<input type="submit" class="btn btn-success" value="Add">
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	<!-- Edit Modal HTML -->
+	<div id="editEmployeeModal" class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<form>
+					<div class="modal-header">						
+						<h4 class="modal-title">Edit Employee</h4>
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					</div>
+					<div class="modal-body">					
+						<div class="form-group">
+							<label>Name</label>
+							<input type="text" class="form-control" required>
+						</div>
+						<div class="form-group">
+							<label>Email</label>
+							<input type="email" class="form-control" required>
+						</div>
+						<div class="form-group">
+							<label>Address</label>
+							<textarea class="form-control" required></textarea>
+						</div>
+						<div class="form-group">
+							<label>Phone</label>
+							<input type="text" class="form-control" required>
+						</div>					
+					</div>
+					<div class="modal-footer">
+						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+						<input type="submit" class="btn btn-info" value="Save">
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	<!-- Delete Modal HTML -->
+	<div id="deleteEmployeeModal" class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<form>
+					<div class="modal-header">						
+						<h4 class="modal-title">Delete Employee</h4>
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					</div>
+					<div class="modal-body">					
+						<p>Are you sure you want to delete these Records?</p>
+						<p class="text-warning"><small>This action cannot be undone.</small></p>
+					</div>
+					<div class="modal-footer">
+						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+						<input type="submit" class="btn btn-danger" value="Delete">
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 
 {% endblock %}
 
